syntax = "proto3";

import "validate/validate.proto";


option go_package = "/proto/gen;mainapi";

package mainapi;

service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1 [(validate.rules).string = {min_len: 3, max_len: 50}, (validate.rules).string.pattern = "[a-zA-Z]+"];
}

message HelloResponse {
    string message = 1;
}